# kashay

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yaml  check.yaml  draft.yaml
scripts/: build.sh
src/app/: application.rs  aws.rs  cli.rs  mod.rs
