[package]
name = "kashay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = "1.0"
aws-config = "^0.101.0"
aws-sdk-iam = "0.39"
aws-sdk-sts = "0.39"
aws-sig-auth = "^0.60.3"
aws-smithy-http = "^0.60.6"
aws-types = "^0.101.0"
base64 = "0.22.0"
chrono = "0.4"
clap = { version = "4", features=["color", "derive", "env", "unicode", "suggestions", "wrap_help"] }
http = "0.2"
iana-time-zone = "^0.1.58"
keyring = "2.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [ "io-std", "macros", "net", "rt", "test-util" ] }

[dev-dependencies]
test-log = "0.2.13"
env_logger = "*"
reqwest = "0.11"
