[package]
name = "eks-creds"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = "1.0"
aws-config = "1.5.4"
aws-credential-types = "1.2.0"
aws-sdk-sts = "1.36.0"
aws-sigv4 = {version = "1.2.3", features=["sign-http"]}
base64 = "0.22.1"
chrono = "0.4"
clap = { version = "4", features=["color", "derive", "env", "unicode", "suggestions", "wrap_help"] }
http = "1.1.0"
mimalloc = "0.1.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = [ "io-std", "macros", "net", "rt", "test-util" ] }

[dev-dependencies]
test-log = "0.2.13"
env_logger = "*"
reqwest = "0.12.5"
